smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/use/invalid-use-qualifier.smithy
// Parse error at line 3, column 5 near `metadata`: Invalid use statement

use metadata foo
